2006-11-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_typeinterface.c: Fixed a bug when accessing the properties
	of GLib::Instantiatable. 

2006-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Set "0" to micro version of version 
	header if pkg-config --modversion doesn't have micro version.
	Bug #1590573.
	
2006-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_closure.c: improved alive check.

2006-09-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb: used $INCFLAGS instead of $CFLAGS.

2006-09-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_closure.c: improved closure handling. I hope this
	change fixes a closure related segmentation fault bug.
	- added available data marks and checked that marks.

2006-09-21  kangabroo

	* src/rbgobj_enums.c: fixed typo. bug #1561675.

2006-08-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_object.c: Compiled on GLib-2.8.x again. 

2006-07-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/glib2.def, src/rbgobject.c, src/rbgobject.h
	(rbgobj_ruby_object_from_instance_with_unref):
	added convenience function.
	* src/rbglib.h (GOBJ2RVALU): added convenience macro.

	* src/rbgobj_object.c: implemented GLib::InitiallyUnowned.

	* src/rbglib.h (RVAL2CSTR2): added convenience macro.

2006-06-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_mainloop.c, rbgobject.h, glib2.def: Improve to support
	Win32. rbg_(set|remove)_internal_poll_func are externed.

2006-06-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Fixed wrong include path.
	* src/rbglib.h: Increment version info.

2006-06-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_type.c: Fixed a problem when the object which extends Module
	can't access the instance methods. Reported by Laurent Sansonetti and Bug #1496185.

2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/type-register?.rb: Remove Gtk.init.
	* src/lib/glib2.rb: Added GLib.exit_application. This is called when it raises