@@ -1,3 +1,8 @@
+2006-12-04  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbglib_iochannel.c: made "U" each time for avoiding GC
+	problem.
+
 2006-11-22  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgobj_typeinterface.c: Fixed a bug when accessing the properties
